portfolio/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portfolio
    app.kubernetes.io/name: portfolio
  name: portfolio
  namespace: portfolio
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: portfolio
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: portfolio
        app.kubernetes.io/name: portfolio
    spec:
      containers:
      - image: docker.io/kyungsu77777/portfolio:1.0.1
        imagePullPolicy: Always
        name: portfolio
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: portfolio-cm
