portfolio/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: "portfolio-letsencrypt-prod"
  name: portfolio-ingress
  namespace: portfolio
spec:
  tls:
  - hosts:
    - portfolio.kyungsu.com
    secretName: portfolio-tls
  ingressClassName: nginx
  rules:
  - host: portfolio.kyungsu.com
    http:
      paths:
      - backend:
          service:
            name: portfolio
            port:
              number: 8082
        path: /
        pathType: Prefix
